Base data structure using VueX

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>sharades</title>
+    <title>Sharades</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but sharades doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Sharades doesn't work without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="game"></div>
     <!-- built files will be auto injected -->
