--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,44 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Sharades</title>
   </head>
+  <style>
+    @font-face {
+      font-family: 'Helvetica Ultra Compressed';
+      src: url('/fonts/Helvetica-UltraCompressed.otf');
+    }
+    @font-face {
+      font-family: 'Founders Grotesk';
+      font-weight: 500;
+      src: url('/fonts/FoundersGrotesk-Medium.otf');
+    }
+    h1, h2 {
+      font-family: 'Helvetica Ultra Compressed';
+      font-weight: normal;
+      margin: 0 0 5px;
+      letter-spacing: 0;
+    }
+    h1 {
+      font-size: 80px;
+    }
+    h2 {
+      font-size: 36px;
+    }
+    html, body {
+      background: #FFFCF3;
+      font-family: 'Founders Grotesk';
+      letter-spacing: 0.5px;
+      text-transform: uppercase;
+      font-size: 20px;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+    a, a:hover {
+      text-decoration: none;
+    }
+    * {
+      box-sizing: border-box;
+    }
+  </style>
   <body>
     <noscript>
       <strong>We're sorry but Sharades doesn't work without JavaScript enabled. Please enable it to continue.</strong>
