--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,8 @@
     }
     html, body {
       background: #FFFCF3;
-      font-family: 'Founders Grotesk';
+      font-family: 'Founders Grotesk', sans-serif;
+      font-weight: 500;
       letter-spacing: 0.5px;
       text-transform: uppercase;
       font-size: 20px;
