Restructure component structure

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     <noscript>
       <strong>We're sorry but Sharades doesn't work without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="game"></div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
